Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -36,13 +36,25 @@ $(function(){
 					<a href="<{:U('SubUser/person_index')}>" target="rightFrame">个人用户</a>
 				</li>
 				<li><cite></cite>
-					<a href="<{:U('SubMoneyLog/index')}>" target="rightFrame">金额日志</a>
-				</li>
-				<li><cite></cite>
 					<a href="<{:U('Recharge/index')}>" target="rightFrame">系统充值</a>
 				</li>
 				<li><cite></cite>
+					<a href="<{:U('SubCz/index')}>" target="rightFrame">个人充值</a>
+				</li>
+				<li><cite></cite>
 					<a href="<{:U('SubMoneyLog/zzrj')}>" target="rightFrame">转账日结</a>
+				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubMoneyLog/zfsqf')}>" target="rightFrame">支付申请费</a>
+				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubMoneyLog/thsqf')}>" target="rightFrame">退还申请费</a>
+				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubMoneyLog/index')}>" target="rightFrame">金额日志</a>
+				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubOut/index')}>" target="rightFrame">提现管理</a>
 				</li>
 			</ul>
 		</dd>
