Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -45,10 +45,10 @@ $(function(){
 					<a href="<{:U('SubMoneyLog/zzrj')}>" target="rightFrame">转账日结</a>
 				</li>
 				<li><cite></cite>
-					<a href="<{:U('SubMoneyLog/zfsqf')}>" target="rightFrame">支付申请费</a>
+					<a href="<{:U('SubMoneyLog/zfsqf')}>" target="rightFrame">支付报名费</a>
 				</li>
 				<li><cite></cite>
-					<a href="<{:U('SubMoneyLog/thsqf')}>" target="rightFrame">退还申请费</a>
+					<a href="<{:U('SubMoneyLog/thsqf')}>" target="rightFrame">退还报名费</a>
 				</li>
 				<li><cite></cite>
 					<a href="<{:U('SubMoneyLog/index')}>" target="rightFrame">金额日志</a>
