--- a/tp/Admin/Tpl/SubMoneyLog/zzrj.html
+++ b/tp/Admin/Tpl/SubMoneyLog/zzrj.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>后台管理</title>
 <link href="__PUBLIC__/admin/css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="__PUBLIC__/admin/js/jquery.js"></script>
-<script language="javascript" src="__PUBLIC__/admin/js/cc-alert.js"></script>
+<script type="text/javascript" src="__PUBLIC__/js/jquery.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/admin/js/alert-tip.js"></script>
 <script language="javascript">
 	$(function() {
 		//导航切换
