--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -36,6 +36,9 @@ $(function(){
 					<a href="<{:U('SubUser/person_index')}>" target="rightFrame">个人用户</a>
 				</li>
 				<li><cite></cite>
+					<a href="<{:U('SubMoneyLog/all')}>" target="rightFrame">金额总览</a>
+				</li>
+				<li><cite></cite>
 					<a href="<{:U('Recharge/index')}>" target="rightFrame">系统充值</a>
 				</li>
 				<li><cite></cite>
