--- a/tp/Admin/Tpl/SubMoneyLog/index.html
+++ b/tp/Admin/Tpl/SubMoneyLog/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <div class="rightinfo">
-	<if condition="$_GET['uid'] eq ''">
+	<!-- <if condition="$_GET['uid'] eq ''">
 		<div class="top_div">
 			<{$start_date}>
 			<br />至
@@ -69,7 +69,7 @@
 			<br />￥<{$sum_row['type5']|default=0}>
 		</div>
 	</if>
-	<div style="height:10px;clear:both;"></div>
+	<div style="height:10px;clear:both;"></div> -->
 	<div class="tools">
 		<form action="" name="searchForm" method="get">
 		<input type="hidden" name='m' value='<{$moduleName}>' />
