Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/SubMoneyLog/all.html
+++ b/tp/Admin/Tpl/SubMoneyLog/all.html
@@ -68,7 +68,7 @@
 			<br />至
 			<br /><{$end_date}>
 			<br />提现
-			<br /><a href="<{:U('SubOut/index',array('start_date'=>$start_date,'end_date'=>$end_date))}>">￥<{$sum_row['type2']|default=0}></a>
+			<br /><a href="<{:U('SubOut/all',array('start_date'=>$start_date,'end_date'=>$end_date))}>">￥<{$sum_row['type2']|default=0}></a>
 		</div>
 		<div class="top_div">
 			<{$start_date}>
