--- a/tp/Admin/Tpl/SubTask/index.html
+++ b/tp/Admin/Tpl/SubTask/index.html
@@ -29,6 +29,24 @@
 </head>
 <body>
 <div class="rightinfo">
+	<div class="tools">
+		<form action="" name="searchForm" method="get">
+		<input type="hidden" name='m' value='<{$moduleName}>' />
+		<input type="hidden" name='a' value="<{$actionName}>" />
+		<ul class="toolbar1"><li>
+			<span style="margin-top:0;">
+				工作开始日期:
+				<input type="text" class="date_picker" name="start_date" placeholder="开始日期" value="<{:I('get.start_date')}>" /> —
+			</span>
+			<span style="margin-top:0;">
+				结束日期:
+				<input type="text" class="date_picker" name="end_date" placeholder="结束日期" value="<{:I('get.end_date')}>" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			</span>
+			<b onclick="search()">搜索</b>
+		</li>
+		</ul>
+		</form>
+	</div>
 	<table class="imgtable">
 		<thead>
 			<tr>
@@ -45,7 +63,7 @@
 		<tbody>
 			<foreach name="list['data']" item='v'>
 			<tr>
-				<td><{$v.title}>-<if condition="$v.pay_type eq 1">现金日结<else/><span style='color:red'>转账日结</span></if></td>
+				<td><{$v.title}>-<if condition="$v.pay_type eq 1">现金日结<else/><span style='color:red;display:inline;'>转账日结</span></if></td>
 				<td><{$v.money}></td>
 				<td><{$v.valid_num}></td>
 				<td><{$v.js_num}></td>
@@ -63,5 +81,31 @@
 		</ul>
 	</div>
 </div>
+<script type="text/javascript">
+function search(){
+	if($("input[name='start_date']").val()=='' && $("input[name='end_date']").val()!=''){
+		alert_tip('请选择开始日期');return;
+	}
+	if($("input[name='start_date']").val()!='' && $("input[name='end_date']").val()==''){
+		alert_tip('请选择结束日期');return;
+	}
+	var start_date_val=parseInt($("input[name='start_date']").val().replace(/-/g,""));
+	var end_date_val=parseInt($("input[name='end_date']").val().replace(/-/g,""));
+	if(start_date_val > end_date_val){
+		alert_tip('开始日期不能大于结束日期');return;
+	}
+	document.searchForm.submit();
+}
+</script>
+<!-- 日期插件开始 -->
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/datepicker/date_picker.css" media="all" />
+<script type="text/javascript" src="__PUBLIC__/datepicker/jquery.date_input.pack.js"></script>
+<style type="text/css">
+.date_selector .month_name{margin-left:30px;}
+</style>
+<script type="text/javascript">
+$(function(){$('.date_picker').date_input();})
+</script>
+<!-- 日期插件结束 -->
 </body>
 </html>
