--- a/tp/Admin/Tpl/SubTask/see.html
+++ b/tp/Admin/Tpl/SubTask/see.html
@@ -42,9 +42,9 @@
 			</tr>
 		</thead>
 		<tbody>
-			<foreach name="list" item='v'>
+			<foreach name="list" key='k' item='v'>
 			<tr>
-				<td><{$v.nickname}></td>
+				<td><{$v.xuhao}>-<{$v.nickname}></td>
 				<td><{$v.sex}></td>
 				<td><{$v.username}></td>
 				<td>
