Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -82,6 +82,16 @@ $(function(){
 		</dd>
 		<dd>
 			<div class="title">
+				<span><img src="__PUBLIC__/admin/images/leftico04.png" /></span>禁闭管理
+			</div>
+			<ul class="menuson">
+				<li><cite></cite>
+					<a href="<{:U('Ban/index')}>" target="rightFrame">禁闭列表</a>
+				</li>
+			</ul>
+		</dd>
+		<dd>
+			<div class="title">
 				<span><img src="__PUBLIC__/admin/images/leftico03.png" /></span>职位管理
 			</div>
 			<ul class="menuson">
