--- a/tp/Admin/Tpl/SubTask/see.html
+++ b/tp/Admin/Tpl/SubTask/see.html
@@ -29,6 +29,12 @@
 </head>
 <body>
 <div class="rightinfo">
+	<div class="tools">
+		<ul class="toolbar1"><li>
+			<a href="<{:U('daochu',array('tid'=>I('get.tid')))}>"><b>导出到excel</b></a>
+		</li>
+		</ul>
+	</div>
 	<table class="imgtable">
 		<thead>
 			<tr>
