--- a/tp/Admin/Tpl/Ban/index.html
+++ b/tp/Admin/Tpl/Ban/index.html
@@ -31,41 +31,46 @@
 <div class="rightinfo">
 	<div class="tools">
 		<ul class="toolbar">
-			<li class="click" onclick="location.href='<{:U('add')}>'"><span><img src="__PUBLIC__/admin/images/t01.png" /></span>add/添加</li>
+			<li class="click" onclick="location.href='<{:U('add')}>'"><span><img src="__PUBLIC__/admin/images/t01.png" /></span>添加</li>
 		</ul>
-		<!-- <form action="" name="searchForm" method="get">
+		<form action="<{:U('index')}>" name="searchForm" method="get">
 		<input type="hidden" name='m' value='<{$moduleName}>' />
 		<input type="hidden" name='a' value="<{$actionName}>" />
 		<ul class="toolbar1">
 			<li>
 				<span>
-					<input type="text" name="name" placeholder="请输入名字" value="<{:I('get.name')}>" />
+					<input type="text" name="username" placeholder="请输入手机号" value="<{:I('get.username')}>" />
 				</span>
-				<select name="scoredate">
-					<option value="">请选择日期</option>
-					<foreach name="dateArr" item="vo">
-						<option value="<{$vo}>" <if condition="$_GET['scoredate'] eq $vo">selected</if> ><{$vo}></option>
-					</foreach>
-				</select>
+				<span>
+					<input type="text" name="cardnum" placeholder="请输入身份证号" value="<{:I('get.cardnum')}>" />
+				</span>
 				<b onclick="document.searchForm.submit()">搜索</b>
 			</li>
 		</ul>
-		</form> -->
+		</form>
 	</div>
 	<table class="imgtable">
 		<thead>
 			<tr>
-				<th>name/名称</th>
-				<th>action/操作</th>
+				<th width="200px;">手机号</th>
+				<th>身份证号</th>
+				<th>禁闭类别</th>
+				<th>解禁日期</th>
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
 			<foreach name="list['data']" item='v'>
 			<tr>
-				<td><{$v.name}></td>
-				<td><a href="<{:U('add',array('id'=>$v['id']))}>" target="rightFrame" onFocus="this.blur()" class="add">edit/编辑</a>
+				<td><{$v.username}></td>
+				<td><{$v.cardnum}></td>
+				<td><{$ban_type[$v['type']]}></td>
+				<td><{$v.end_time}></td>
+				<td>
+				<a href="<{:U('add',array('id'=>$v['id']))}>" target="rightFrame" onFocus="this.blur()" class="add">编辑</a>
 				&nbsp;|&nbsp;
-				<a href="javascript:void(0);" target="rightFrame" onFocus="this.blur()" onclick="delRow('<{:U('del',array('id'=>$v['id']))}>')">del/删除</a></td>
+				<a href="javascript:void(0);" target="rightFrame" onFocus="this.blur()" onclick="delRow('<{:U('del',array('id'=>$v['id']))}>')">删除</a>
+				</td>
 			</tr>
 			</foreach>
 		</tbody>
@@ -79,7 +84,7 @@
 <script type="text/javascript">
 $('.imgtable tbody tr:odd').addClass('odd');
 function delRow(str){
-	if(confirm('Sure to delete?/确定要删除吗？')) window.location.href=str;
+	if(confirm('确定要删除吗？')) window.location.href=str;
 }
 </script>
 </body>
