--- a/tp/Admin/Tpl/Index/login.html
+++ b/tp/Admin/Tpl/Index/login.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>欢迎登录后台管理系统</title>
+		<link type="image/x-icon" rel="shortcut icon" href="../yunke.ico" />
 		<link href="__PUBLIC__/admin/css/style.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="__PUBLIC__/admin/js/jquery.js"></script>
 		<script type="text/javascript" src="__PUBLIC__/admin/js/cloud.js"></script>
